Use immutable Maps (via Map.of(), copyOf()) in the parser AST.